# XEngine

./: CMakeLists.txt
cmake/: ManageThirdPartyLibrary.cmake  SystemEnvLib.cmake
src/editor/: CMakeLists.txt
src/engine/: CMakeLists.txt  main.cpp
src/runtime/: CMakeLists.txt  engine.cpp  engine.h
src/runtime/core/base/: macro.h
src/runtime/core/log/: logSystem.h
src/runtime/core/meta/: json.h
src/runtime/core/meta/reflection/: reflection.cpp  reflection.h
src/runtime/function/global/: gContext.cpp  gContext.h
